--- a/ImageRestoration-Adejoke Adeoye.ipynb
+++ b/ImageRestoration-Adejoke Adeoye.ipynb
@@ -6,7 +6,7 @@
         "id": "C0XxLhDJpkf4"
       },
       "source": [
-        "**Image Restoration Model with Deep Learning (Keras)**\n"
+        "**Image Restoration Model with Deep Learning (Keras) - Adejoke Adeoye**\n"
       ]
     },
     {
